tests/hevm/pass/multi4/multi4.act
contract B

contract A

// contract A

constructor
interface constructor(uint z)

iff
   CALLVALUE == 0
   inRange(uint256, z + 1)

creates
   uint x := z + 1


transition x
interface x()

iff
   CALLVALUE == 0

returns
   pre(x)

transition add_x
interface add_x(uint y)

iff
   CALLVALUE == 0
   inRange(uint256, x + y)

storage

  x := x + y


// contract B
constructor
interface constructor(uint i)
iff
   CALLVALUE == 0
   inRange(uint256, i + 42)

creates
   uint z := i + 42
   A a := create A(i)

transition foo
interface foo()

iff
   CALLVALUE == 0

storage
  a := create A(42)
