tests/hevm/fail/multi/multi.act
contract B

contract A

constructor
interface constructor(uint z)

iff
   CALLVALUE == 0
   inRange(uint256, z + 42)

creates
   uint x := z + 42

transition set_x
interface set_x(uint z)

iff
   CALLVALUE == 0

storage
   x := z


constructor
interface constructor(uint v)

iff
   CALLVALUE == 0
   // This condition must be present for equivalence check to pass
   // inRange(uint256, v + 42)

creates
   uint y := 0
   A a := create A(v)
